# agscheduler-cli

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: publish.yml  test.yml
src/: api_client.rs  datetime.rs  http.rs  interaction.rs  lib.rs  main.rs  utils.rs
