[package]
name = "agscheduler-cli"
version = "0.3.0"
edition = "2021"
description = "Command line interface for AGScheduler"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AGScheduler/agscheduler-cli"
repository = "https://github.com/AGScheduler/agscheduler-cli"
keywords = ["cli", "client", "AGScheduler"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = "7.1.1"
dialoguer = "0.11.0"
iana-time-zone = "0.1.60"
mockall = "0.12.1"
mockito = "1.4.0"
reqwest = "0.12.3"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
