[package]
name = "agscheduler-cli"
version = "0.5.0"
edition = "2021"
description = "Command line interface for AGScheduler"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AGScheduler/agscheduler-cli"
repository = "https://github.com/AGScheduler/agscheduler-cli"
keywords = ["cli", "client", "AGScheduler"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = "7.1.1"
dialoguer = "0.11.0"
hex = "0.4.3"
iana-time-zone = "0.1.60"
mockall = "0.12.1"
mockito = "1.4.0"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
